[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Sword.png" type="Texture" id=1]
[ext_resource path="res://objects/Sword.gd" type="Script" id=2]

[sub_resource type="Animation" id=14]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Texture:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.001

[sub_resource type="CapsuleShape2D" id=16]
radius = 24.0
height = 26.0

[node name="Sword" type="Node2D"]
show_behind_parent = true
position = Vector2( -24, -48 )
script = ExtResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 14 )
anims/RESET = SubResource( 17 )

[node name="Texture" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
margin_right = 48.0
margin_bottom = 95.9991
rect_pivot_offset = Vector2( 24, 96 )
texture = ExtResource( 1 )
expand = true

[node name="Area" type="Area2D" parent="Texture" groups=["sword"]]
position = Vector2( 24, 48 )
monitoring = false

[node name="Shape" type="CollisionShape2D" parent="Texture/Area"]
rotation = 3.14159
shape = SubResource( 16 )
one_way_collision = true
one_way_collision_margin = 48.0

[connection signal="animation_finished" from="Anim" to="." method="_on_Sword_animation_finished"]
[connection signal="animation_started" from="Anim" to="." method="_on_Sword_animation_started"]
[connection signal="area_entered" from="Texture/Area" to="." method="_on_Area_area_entered"]
